fix: button overflowing from box

--- a/frontend/src/components/studyMaterialBox/StudyMaterialBox.css
+++ b/frontend/src/components/studyMaterialBox/StudyMaterialBox.css
@@ -6,6 +6,12 @@
     align-items: center;
 }
 
+@media screen and (max-width:468px) {
+    .StudyMaterialBox {
+        flex-wrap: wrap;
+    }
+}
+
 .StudyMaterialBox .title {
     font-family: inherit;
     font-weight: 600;
